--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pycparser==2.20
 pydantic==1.8.2
 PyJWT==2.1.0
 python-dotenv==0.19.0
+python-multipart==0.0.5
 PyYAML==5.4.1
 six==1.16.0
 SQLAlchemy==1.4.22
